infra/k8s/overlays/local/patches/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchen
spec:
  replicas: 2
